Use the /dev/sXX syntax instead of bus,id,lun. Joerg says it should be the same, but then there is bug 122568 and I had problems with the /dev syntax. Seems to work now though.... maybe we should try again...

BUG: 122568

svn path=/trunk/extragear/multimedia/k3b/; revision=600463